--- a/src/scss/main/_widgets.scss
+++ b/src/scss/main/_widgets.scss
@@ -144,11 +144,6 @@
 
         .grid-row .grid-cell {
             width: 225px;
-            padding: 0 25px 0 0;
-
-            &:nth-child(2) {
-                padding: 0 0 0 25px;
-            }
         }
 
         .block-image {
